# asqi-engineer

./: README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: asqi-cd.yaml  asqi-container-publish.yaml  repo-containers-cd.yaml  repo-containers-publish.yaml  security.yaml  test.yaml
config/datasets/: demo_datasets.yaml  sample_chatbot_scenarios.json  sample_reviews.json
config/generation/: example_generator.yaml
config/score_cards/: example_score_card.yaml  expression_examples_score_card.yaml  harbor_score_card.yaml
config/suites/: chatbot_dataset_example.yaml  coding_agent_test.yaml  demo_image_test.yaml  demo_test.yaml  image_vlm_test.yaml
config/systems/: coding_agents.yaml  image_systems.yaml
docs/: agent-test-containers.md  architecture.md  configuration.md  custom-test-containers.md  datasets.md  examples.md  index.rst  llm-test-containers.md  quickstart.md  test-containers.md
scripts/: generate_schemas.py
sdg_containers/example_data_generator/: Dockerfile  README.md  entrypoint.py  manifest.yaml  pyproject.toml
src/asqi/: config.py  container_manager.py  datasets.py  errors.py  main.py  metric_expression.py  output.py  response_schemas.py  schemas.py  score_card_engine.py  (+3 more)
test_containers/chatbot_simulator/: Dockerfile  entrypoint.py  manifest.yaml  pyproject.toml  simulation.py
tests/: test_datasets.py  test_environment_variables.py  test_execution_plan.py  test_main.py  test_metric_expression.py  test_output.py  test_response_schemas.py  test_schema.py  test_score_card_engine.py  test_validation.py  test_workflow.py
(+37 files in other folders)
